--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,11 @@ panic = "abort"
 [profile.release]
 panic = "abort"
 
+[dependencies.lazy_static]
+version = "1.0"
+features = ["spin_no_std"]
+
 [dependencies]
 bootloader = "0.9" 
+spin = "0.9.8"
+volatile = "0.2.6"
